--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E4E2CF"
     tools:context=".MainActivity">
 
     <include
@@ -42,26 +43,38 @@
             android:layout_margin="20dp"
             android:layout_row="0"
             android:layout_column="0"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="15dp">
+            app:cardCornerRadius="15dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView4"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_baseline_newspaper_100" />
+
                 <TextView
+                    android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="뉴스"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
-                    android:textSize="40dp"
+                    android:textColor="#6B5434"
+                    android:textSize="25dp"
                     android:textStyle="bold"
+                    android:layout_marginBottom="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
@@ -74,24 +87,37 @@
             android:layout_row="0"
             android:layout_column="1"
             app:cardCornerRadius="15dp"
-            app:cardElevation="15dp">
+            android:backgroundTint="@color/white">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+
+                <ImageView
+                    android:id="@+id/imageView_Aisearch"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView6"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/chatgpt_logo" />
+
                 <TextView
+                    android:id="@+id/textView6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="AI검색"
                     android:textAlignment="center"
                     android:textColor="@color/black"
-                    android:textSize="40dp"
+                    android:textSize="25dp"
                     android:textStyle="bold"
+                    android:layout_marginBottom="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
@@ -104,8 +130,7 @@
             android:layout_margin="20dp"
             android:layout_row="1"
             android:layout_column="0"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="15dp"/>
+            app:cardCornerRadius="15dp"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/button19"
@@ -114,59 +139,8 @@
             android:layout_margin="20dp"
             android:layout_row="1"
             android:layout_column="1"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="15dp" />
+            app:cardCornerRadius="15dp">
 
-
+        </androidx.cardview.widget.CardView>
     </GridLayout>
-
-    <!--
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@+id/include2"
-            app:layout_constraintTop_toBottomOf="@+id/include">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <Button
-                    android:id="@+id/button10"
-                    android:layout_width="150dp"
-                    android:layout_height="200dp"
-                    android:layout_margin="20dp"
-                    android:text="Button" />
-
-                <Button
-                    android:id="@+id/button9"
-                    android:layout_width="150dp"
-                    android:layout_height="200dp"
-                    android:layout_margin="20dp"
-                    android:text="Button" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <Button
-                    android:id="@+id/button12"
-                    android:layout_width="150dp"
-                    android:layout_height="200dp"
-                    android:layout_margin="20dp"
-                    android:text="Button" />
-
-                <Button
-                    android:id="@+id/button11"
-                    android:layout_width="150dp"
-                    android:layout_height="200dp"
-                    android:layout_margin="20dp"
-                    android:text="Button" />
-            </TableRow>
-
-        </TableLayout>
--->
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
