--- a/app/src/main/res/layout/activity_news_category.xml
+++ b/app/src/main/res/layout/activity_news_category.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E4E2CF"
     tools:context=".NewsCategoryActivity">
 
     <include
@@ -33,14 +34,13 @@
         app:layout_constraintTop_toBottomOf="@+id/include">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/button_toEntertainmentNews"
+            android:id="@+id/button_toEconomyNews"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_margin="20dp"
             android:layout_row="0"
             android:layout_column="0"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="15dp">
+            app:cardCornerRadius="15dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -49,7 +49,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="연예"
+                    android:text="경제"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="40dp"
@@ -64,14 +64,13 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/button_toEconomyNews"
+            android:id="@+id/button_toPoliticNews"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_margin="20dp"
             android:layout_row="0"
             android:layout_column="1"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="15dp">
+            app:cardCornerRadius="15dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -80,7 +79,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="경제"
+                    android:text="정치"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="40dp"
@@ -95,14 +94,13 @@
 
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/button_toPoliticNews"
+            android:id="@+id/button_toInternationalNews"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_margin="20dp"
             android:layout_row="1"
             android:layout_column="0"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="15dp">
+            app:cardCornerRadius="15dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -111,7 +109,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="경제"
+                    android:text="국제"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="40dp"
@@ -125,14 +123,13 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/button19"
+            android:id="@+id/button_toEntertainmentNews"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_margin="20dp"
             android:layout_row="1"
             android:layout_column="1"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="15dp" >
+            app:cardCornerRadius="15dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -141,7 +138,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="경제"
+                    android:text="연예"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="40dp"
