--- a/app/src/main/res/layout/titlebar.xml
+++ b/app/src/main/res/layout/titlebar.xml
@@ -21,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="백세AI대"
-                android:textColor="@color/black"
+                android:textColor="#6B5434"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
