--- a/app/src/main/res/drawable/guideline_straight_blue.xml
+++ b/app/src/main/res/drawable/guideline_straight_blue.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="line">
+    android:shape="rectangle">
     <stroke
         android:color="#0000FF"
-        android:width="20dp"/>
+        android:width="20dp"
+        android:height="200dp"/>
 </shape>
