--- a/app/src/main/res/layout/activity_news_page.xml
+++ b/app/src/main/res/layout/activity_news_page.xml
@@ -24,6 +24,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:layout_margin="20dp"
@@ -67,8 +68,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_marginTop="10dp"
-                    android:background="@color/white" /> <!-- 기사 이미지 삽입 -->
-
+                    android:background="@color/white"
+                    android:src="@drawable/newsimage" /> <!-- 기사 이미지 삽입 -->
 
 
                 <androidx.cardview.widget.CardView
@@ -86,10 +87,23 @@
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="20dp"
-                        android:textStyle="bold" /> <!-- 기사 내용 삽입 -->
+                        android:textStyle="bold" />
+
+                    <!-- 기사 내용 삽입 -->
 
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
         </ScrollView>
+
     </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/button_panel_include"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:srcCompat="@drawable/guideline_straight_blue" />
 </androidx.constraintlayout.widget.ConstraintLayout>
