--- a/app/src/main/res/layout/activity_news_category.xml
+++ b/app/src/main/res/layout/activity_news_category.xml
@@ -51,7 +51,7 @@
                     android:layout_height="wrap_content"
                     android:text="경제"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
+                    android:textColor="#6B5434"
                     android:textSize="40dp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -82,7 +82,7 @@
                     android:layout_height="wrap_content"
                     android:text="정치"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
+                    android:textColor="#6B5434"
                     android:textSize="40dp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -112,7 +112,7 @@
                     android:layout_height="wrap_content"
                     android:text="국제"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
+                    android:textColor="#6B5434"
                     android:textSize="40dp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -141,7 +141,7 @@
                     android:layout_height="wrap_content"
                     android:text="연예"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
+                    android:textColor="#6B5434"
                     android:textSize="40dp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
