--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="DarkBrown">#FF6B5434</color>
+    <color name="Brown">#FFE4E2CF</color>
+    <color name="LightBrown">#FFE4E2CF</color>
 </resources>
