--- a/app/src/main/res/layout/activity_news_page_copy.xml
+++ b/app/src/main/res/layout/activity_news_page_copy.xml
@@ -12,7 +12,14 @@
         layout="@layout/titlebar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:text="asssssssssssssssssssss"
+            android:textSize="30dp"
+            android:textColor="@color/black"/>
+
+    </include>
 
     <include
         android:id="@+id/button_panel_include"
@@ -24,13 +31,12 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/cardView_Article"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="300dp"
         android:layout_margin="20dp"
         app:cardBackgroundColor="#6B5434"
         app:cardCornerRadius="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/button_panel_include"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titlebar_include">
@@ -69,7 +75,6 @@
                     android:layout_height="200dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/white"
-                    android:scaleType="centerCrop"
                     android:src="@drawable/newsimage" /> <!-- 기사 이미지 삽입 -->
 
 
@@ -98,14 +103,20 @@
 
     </androidx.cardview.widget.CardView>
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+<!--
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/button_panel_include"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView"
-        app:srcCompat="@drawable/guideline_straight_blue" />
+        app:layout_constraintTop_toTopOf="@+id/titlebar_include"
+        android:background="@drawable/processing_screen">
+    </FrameLayout>
+-->
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
