--- a/app/src/main/res/layout/activity_ai_search.xml
+++ b/app/src/main/res/layout/activity_ai_search.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AiSearchActivity">
+    tools:context=".AiSearchActivity"
+    android:background="#E4E2CF">
 
     <include
         android:id="@+id/include"
@@ -22,12 +23,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-        <FrameLayout
+    <FrameLayout
             android:id="@+id/processing_screen_layout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@drawable/processing_screen"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/include2"
             app:layout_constraintTop_toTopOf="@+id/include">
 
@@ -54,5 +55,40 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </FrameLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/include2"
+        app:layout_constraintTop_toBottomOf="@+id/include">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:backgroundTint="@color/black"
+                app:cardCornerRadius="15dp">
+
+                <TextView
+                    android:id="@+id/textView_AiSearch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:hint="마이크를 꾹 누르고 말하세요..."
+                    android:textColorHint="@color/white"
+                    android:text=""
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
