--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,7 +111,7 @@
                     android:layout_height="wrap_content"
                     android:text="AI검색"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
+                    android:textColor="#6B5434"
                     android:textSize="25dp"
                     android:textStyle="bold"
                     android:layout_marginBottom="20dp"
@@ -154,7 +154,7 @@
                     android:layout_height="wrap_content"
                     android:text="간편AI"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
+                    android:textColor="#6B5434"
                     android:textSize="25dp"
                     android:textStyle="bold"
                     android:layout_marginBottom="20dp"
