--- a/app/src/main/res/layout/activity_easy_ai_category.xml
+++ b/app/src/main/res/layout/activity_easy_ai_category.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/include">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/button_AIDoctor"
+            android:id="@+id/button_toEasyDoctorActivity"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_margin="20dp"
