--- a/app/src/main/res/layout/activity_ai_search.xml
+++ b/app/src/main/res/layout/activity_ai_search.xml
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@drawable/rounded_corner"
-                android:hint="마이크를 꾹 누르고 말하세요..."
+                android:hint="마이크를 눌러 말하세요..."
                 android:padding="10dp"
                 android:text=""
                 android:textAlignment="viewStart"
