--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,29 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/button_request"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="음성 입력 요청" />
-
-    <TextView
-        android:id="@+id/textView_response"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/button_request"
-        android:gravity="center"
-        android:padding="16dp"
-        android:text="음성 인식 응답"
-        android:textSize="18sp" />
 
     <include
         android:id="@+id/include2"
         layout="@layout/button_panel"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-</RelativeLayout>
+
+    <TextView
+        android:id="@+id/textViewA"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Elon Musk is a well-known entrepreneur and business magnate. He was born on June 28, 1971, in Pretoria, South Africa. Musk is the CEO and lead designer of SpaceX, the CEO and product architect of Tesla, Inc., and the CEO of Neuralink and The Boring Company. He has played a significant role in several industries, including aerospace, electric vehicles, renewable energy, and transportation."
+        android:textColor="@color/black"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:hint="answer"
+        android:textColorHint="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/include2"
+        app:layout_constraintTop_toBottomOf="@+id/textViewA" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
