--- a/app/src/main/res/layout/activity_chatbot.xml
+++ b/app/src/main/res/layout/activity_chatbot.xml
@@ -23,6 +23,17 @@
         android:textSize="28dp"
         />
 
+
+    <include
+        android:id="@+id/include2"
+        layout="@layout/button_panel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
